# deskmon

./: AGENTS.md  LICENSE  README.md  index.html  package-lock.json  package.json
.ai/: keypoint.md
.ai/logs/: 2026-06-25.md  2026-06-30.md  2026-07-01.md  2026-07-02.md  2026-07-03.md  2026-07-06.md  2026-07-07.md  2026-07-08.md  2026-07-09.md  2026-07-10.md  2026-07-13.md  2026-07-14.md  2026-07-15.md  2026-07-16.md  2026-07-23.md  2026-07-24.md
docs/: README.md  ideas.md
docs/designs/: remember-variable-library-ui.md
docs/prds/: 001-tauri-mac-desktop-pet.md  002-remember-clipboard-history.md  003-remember-variable-library.md  004-timer-finished-giant-celebration.md  005-desktop-pet-animation-polish.md  006-lightweight-focus-timer.md  007-macos-region-screenshot.md  008-screenshot-annotation-editor.md  009-local-pet-notification-cli.md  010-cursor-chase-interaction.md  011-unified-pet-dialog-notifications.md  README.md
docs/qa/: v1-smoke-checklist.md
src/: main.ts  pet.ts  remember.ts  screenshot.ts  settings.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: countdown.rs  external_notification.rs  focus_session.rs  geometry.rs  lib.rs  main.rs  remember.rs  screenshot.rs  settings.rs
src/pet/: activityCadence.ts  cursorInteraction.test.ts  cursorInteraction.ts  externalNotificationDialog.ts  externalNotificationFrame.ts  externalNotificationPresentation.test.ts  externalNotificationPresentation.ts  externalNotificationState.test.ts  focusDialog.ts  (+6 more)
(+5 files in other folders)
