[package]
name = "deskmon"
version = "0.1.0"
description = "A macOS pixel desktop pet built with Tauri"
authors = ["sansan"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "deskmon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"
base64 = "0.22"
chacha20poly1305 = "0.10"
rand = "0.8"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
